...
              ),
            ),
            20.heightBox,
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: [
                profileButton(
                    count: "0",
                    title: "in your cart",
                    widthPassed: (context.screenWidth / 3.4)),
                profileButton(
                    count: "10",
                    title: "in your wishlist",
...
